--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ jobs:
 
         - name: List file in current directory
           run: |
-            cd payement
+            cd payment
             ls
         - name: Build and Push Docker Image
           run:  docker build -t pank05081985/scalable-payment:v1 .
