--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,6 +10,10 @@ jobs:
 
   build:
       runs-on: ubuntu-latest
+      defaults:
+        run: 
+          working-directory: ./Scalable-Payment/Scalable-Payment/Payment
+          
       steps:
         - name: Checkout Repository
           uses: actions/checkout@v4
