--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -41,6 +41,9 @@ jobs:
             aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
             aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
             aws-region: us-east-1
+
+        - name:  Update AWS EKS Configuration
+          run: aws eks update-kubeconfig --name scalable-cluster --region us-east-1
         
         - name: Deploy to EKS
           run: kubectl apply -f Deployment.yaml
